add SubtleMotifProblem