@@ -4,11 +4,12 @@ import static java.util.stream.Collectors.joining;
 import static java.util.stream.Collectors.toList;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
+
+import kits.bioinfo.util.CollectionsUtil;
 
 public class Sequence<T> implements Comparable<Sequence<T>>, Iterable<T> {
 
@@ -19,11 +20,11 @@ public class Sequence<T> implements Comparable<Sequence<T>>, Iterable<T> {
     protected final List<T> text;
 
     public Sequence() {
-        this(Collections.emptyList());
+        this(List.of());
     }
 
     public Sequence(List<T> text) {
-        this.text = Collections.unmodifiableList(text);
+        this.text = List.copyOf(text);
     }
 
     public T position(int index) {
@@ -92,6 +93,14 @@ public class Sequence<T> implements Comparable<Sequence<T>>, Iterable<T> {
         newText.addAll(text);
         return new Sequence<>(newText);
     }
+    
+    public Sequence<T> implantSequence(Sequence<T> subSequence, int position) {
+        if(subSequence.length() + position > length())
+            throw new IllegalArgumentException("Can not implant subsequence at position " + position);
+        List<T> prefix = text.subList(0, position);
+        List<T> postfix = text.subList(position + subSequence.length(), length());
+        return new Sequence<>(CollectionsUtil.concat(prefix, subSequence.text, postfix));
+    }
 
     public int hammingDistance(Sequence<T> other) {
         if (other.length() != length())
@@ -119,7 +128,7 @@ public class Sequence<T> implements Comparable<Sequence<T>>, Iterable<T> {
     public Sequence<T> toSequence() {
         return new Sequence<>(text);
     }
-
+    
     @Override
     public boolean equals(Object other) {
         return other instanceof Sequence<?> ? text.equals(((Sequence<?>) other).text) : false;
